@@ -13,6 +13,7 @@ Christian Fillion (a.k.a. cfillion)
 Christian Herdtweck
 Christoph (informationen)
 ckester
+Damian Ariel Perticone
 Daniel R. (r1chelt)
 Daniel Dettlaff (dmilith)
 Daniel Polanco (dlpolanco)
